<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00cbcc"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:hint="@string/tag"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColorHint="@android:color/black"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTag2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:contentDescription="@string/tag"
                    android:orientation="vertical"
                    android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@null"
                android:contentDescription="@string/camera_button"
                app:srcCompat="@drawable/images" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:contentDescription="@string/photo"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible"
            app:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_text"
                android:onClick="TelaTexto"
                android:text="@string/text" />

            <Button
                android:id="@+id/btnPhotos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_photos"
                android:onClick="TelaPhotos"
                android:text="@string/photos" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>