<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00cbcc"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:hint="@string/tag"
                    android:paddingLeft="4dp"
                    android:paddingRight="5dp"
                    android:textColorHint="@android:color/black"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_horizontal|fill_vertical"
                        android:contentDescription="@string/tag"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:contentDescription="@string/text_zone"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/button_text"
                    android:onClick="TelaTexto"
                    android:text="@string/text" />

                <Button
                    android:id="@+id/btnPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/button_photos"
                    android:onClick="TelaPhotos"
                    android:text="@string/photos" />

            </LinearLayout>

        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>

</FrameLayout>

