<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00cbcc"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:hint="@string/tag"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:textColorHint="@android:color/black"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTag2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@null"
                    app:srcCompat="@drawable/images" />

            </LinearLayout>
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridGaleria"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="10"
            android:visibility="visible"
            app:columnCount="2">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/photo"
                android:onClick="Telafotofull"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/photo"
                android:onClick="Telafotofull"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/photo"
                android:onClick="Telafotofull"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/photo"
                android:onClick="Telafotofull"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:srcCompat="@mipmap/ic_launcher" />
        </androidx.gridlayout.widget.GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_text"
                android:onClick="TelaTexto"
                android:text="@string/text" />

            <Button
                android:id="@+id/btnPhotos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_photos"
                android:onClick="TelaPhotos"
                android:text="@string/photos" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>